compose/rabbitmq/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ms-rabbitmq
spec:
  # serviceName: ms-rabbitmq
  serviceName: not-applicable
  replicas: 2
  selector:
    matchLabels:
      app: ms-rabbitmq
  template:
    metadata:
      labels:
        app: ms-rabbitmq
    spec:
      automountServiceAccountToken: false
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13-management-alpine
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
