compose/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-rabbitmq
spec:
  type: LoadBalancer
  selector:
    app: ms-rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
